--- a/src/Share/basic_go/login.html
+++ b/src/Share/basic_go/login.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>go 登陆test</title>
 </head>
 <body>
-$END$
+<form method="POST" action="/login">
+    <input type="text" name="username" placeholder="用户名">
+    <input type="text" name="password" placeholder="密码">
+    <input type="text" name="phone" placeholder="手机号">
+    <input type="text" name="ageOne" placeholder="年龄">
+    <input type="text" name="utype" placeholder="类型">
+    <input type="submit" value="登陆" >
+</form>
 </body>
 </html>
