--- a/src/Share/basic_go/upload.html
+++ b/src/Share/basic_go/upload.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>go test上传</title>
 </head>
 <body>
-$END$
+<form method="post" action="upload" enctype="multipart/form-data">
+    <input type="file" name="uploadfile"/>
+    <input type="submit" value="上传"/>
+</form>
+
 </body>
 </html>
